--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-prod": "webpack --env.NODE_ENV --mode production --color --progress --optimize-minimize",
-    "deploy-test": "webpack --env.NODE_ENV=testing --color --progress --optimize-minimize",
+    "deploy-prod": "webpack --mode production --color --progress --optimize-minimize",
+    "deploy-test": "webpack --mode testing --color --progress --optimize-minimize",
     "build": "webpack --mode development --color --progress",
     "server": "webpack-dev-server --mode development --open --watch -d"
   },
