--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "material-components-web": "^1.1.1",
     "md-date-time-picker": "^2.3.0",
     "mithril": "^1.1.6",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "uglify-js": "^3.6.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
@@ -29,7 +34,8 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "webpack": "^4.30.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "webpack": "^4.39.1",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
   }
